--- a/CarRental/CarRentalDesktop/App.xaml
+++ b/CarRental/CarRentalDesktop/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:CarRentalDesktop"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../Views/CarsView.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
