--- a/CarRental/CarRentalDesktop/MainWindow.xaml
+++ b/CarRental/CarRentalDesktop/MainWindow.xaml
@@ -84,25 +84,25 @@
                     <Button Grid.Row="0"
                             Grid.Column="1"
                             Style="{StaticResource ButtonClear}"
-                            Command="{Binding Path=Clear}">
+                            Command="{Binding Path=ClearCommand}">
                         <Image Source="pack://application:,,,/image/clear.jpg" />
                     </Button>
                     <Button Grid.Row="2"
                             Grid.Column="0"
                             Style="{StaticResource ButtonAddSave}"
-                            Command="{Binding Path=AddNewClient}"
+                            Command="{Binding Path=AddNewClientCommand}"
                             Content="Добавить" />
                     <Button Grid.Row="2"
                             Grid.Column="1"
                             Style="{StaticResource ButtonDelete}"
-                            Command="{Binding Path=RemoveClient}"
+                            Command="{Binding Path=RemoveClientCommand}"
                             CommandParameter="{Binding SelectedClient}"
                             Content="Удалить" />
                     <Button Grid.Row="3"
                             Grid.Column="0"
                             Grid.ColumnSpan="2"
                             Style="{StaticResource ButtonAddSave}"
-                            Command="{Binding Path=SaveClient}"
+                            Command="{Binding Path=SaveClientCommand}"
                             CommandParameter="{Binding SelectedClient}"
                             Content="Сохранить" />
                 </Grid>
@@ -167,25 +167,25 @@
                     <Button Grid.Row="0"
                             Grid.Column="1"
                             Style="{StaticResource ButtonClear}"
-                            Command="{Binding Path=Clear}">
+                            Command="{Binding Path=ClearCommand}">
                         <Image Source="pack://application:,,,/image/clear.jpg" />
                     </Button>
                     <Button Grid.Row="2"
                             Grid.Column="0"
                             Style="{StaticResource ButtonAddSave}"
-                            Command="{Binding Path=AddNewManager}"
+                            Command="{Binding Path=AddNewManagerCommand}"
                             Content="Добавить" />
                     <Button Grid.Row="2"
                             Grid.Column="1"
                             Style="{StaticResource ButtonDelete}"
-                            Command="{Binding Path=RemoveManager}"
+                            Command="{Binding Path=RemoveManagerCommand}"
                             CommandParameter="Удалить"
                             Content="Удалить" />
                     <Button Grid.Row="3"
                             Grid.Column="0"
                             Grid.ColumnSpan="2"
                             Style="{StaticResource ButtonAddSave}"
-                            Command="{Binding Path=SaveManager}"
+                            Command="{Binding Path=SaveManagerCommand}"
                             CommandParameter="{Binding SelectedManager}"
                             Content="Сохранить" />
                 </Grid>
@@ -269,25 +269,25 @@
                     <Button Grid.Row="0"
                             Grid.Column="1"
                             Style="{StaticResource ButtonClear}"
-                            Command="{Binding Path=Clear}">
+                            Command="{Binding Path=ClearCommand}">
                         <Image Source="pack://application:,,,/image/clear.jpg" />
                     </Button>
                     <Button Grid.Row="2"
                             Grid.Column="0"
                             Style="{StaticResource ButtonAddSave}"
-                            Command="{Binding Path= AddNew}"
+                            Command="{Binding Path= AddNewCommand}"
                             Content="Оформить аренду" />
                     <Button Grid.Row="2"
                             Grid.Column="1"
                             Style="{StaticResource ButtonDelete}"
-                            Command="{Binding Path=Remove}"
+                            Command="{Binding Path=RemoveCommand}"
                             CommandParameter="{Binding SelectedRent}"
                             Content="Удалить" />
                     <Button Grid.Row="3"
                             Grid.Column="0"
                             Grid.ColumnSpan="2"
                             Style="{StaticResource ButtonAddSave}"
-                            Command="{Binding Path=Return}"
+                            Command="{Binding Path=ReturnCommand}"
                             CommandParameter="{Binding SelectedRent}"
                             Content="Вернуть машину" />
                 </Grid>
